[gd_scene load_steps=9 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://scenes/actors/player/Car.gd" type="Script" id=2]
[ext_resource path="res://library/common/HitBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://library/common/HurtBox.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 35, 27.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 38, 29 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 33.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 6, 24.5 )

[node name="Car" type="KinematicBody2D"]
collision_mask = 17
script = ExtResource( 2 )
speed = 400

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 22, 1 )
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 20, 0 )
scale = Vector2( 1.5, 1 )
texture = ExtResource( 1 )

[node name="HurtBox" parent="." instance=ExtResource( 4 )]

[node name="Area" parent="HurtBox" index="0"]
collision_layer = 1
collision_mask = 0

[node name="Shape" parent="HurtBox/Area" index="0"]
position = Vector2( 21, -1 )
shape = SubResource( 5 )

[node name="HitBox" parent="." instance=ExtResource( 3 )]
position = Vector2( 2, 1 )

[node name="Area" parent="HitBox" index="0"]
collision_layer = 0
collision_mask = 2

[node name="Shape" parent="HitBox/Area" index="0"]
position = Vector2( 61, -1.5 )
shape = SubResource( 2 )
disabled = true

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Rear" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rear"]
position = Vector2( -22, -0.5 )
shape = SubResource( 4 )

[connection signal="is_dead" from="HurtBox" to="." method="_on_HurtBox_is_dead"]
[connection signal="took_damage" from="HurtBox" to="." method="_on_HurtBox_took_damage"]
[connection signal="on_hit" from="HitBox" to="." method="_on_HitBox_on_hit"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="HurtBox"]
[editable path="HitBox"]
